# autoware-launch-gui

./: .gitignore  LICENSE  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
public/: splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  desktop.json
src-tauri/capabilities/schemas/: desktop-schema.json
src-tauri/src/: handlers.rs  main.rs  setup.rs
src-tauri/src/components/: autoware_manager.rs  files.rs  json_profile.rs  mod.rs  ros2_cmd_manager.rs  rosbag_manager.rs  ssh_manager.rs  system.rs  tray.rs  window_manager.rs  xml_parse.rs  yaml_edit.rs
src/app/: App.tsx  layout.tsx  page.tsx
src/app/jotai/: atoms.ts
src/components/: AutowareFolderSetup.tsx  AutowareLaunchDialog.tsx  BagPlayFlagsDialog.tsx  BagRecordFlagsDialog.tsx  BagRecordLogDialog.tsx  CalibrationTools.tsx  DialogYamlParser.tsx  DropDownYaml.tsx  EditArgsDialog.tsx  ProfileSetup.tsx  ReadConfig.tsx  RosBagInfo.tsx  SSHDialog.tsx  SearchBar.tsx  TopicPubFlagsDialog.tsx  Tree.tsx  WebSocket.tsx  about-dialog.tsx  icons.tsx  menu-mode-toggle.tsx  menu.tsx  mode-toggle.tsx  style-switcher.tsx  useDebouncedState.tsx
src/components/tabComponents/: CPUMemUsage.tsx  Launch.tsx  LaunchMainEntry.tsx  RosbagPlayer.tsx  ServiceCall.tsx  Settings.tsx  TopicPublish.tsx  TopicsBagRecord.tsx  YamlEdit.tsx  index.ts
src/components/ui/: accordion.tsx  alert-dialog.tsx  calendar.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  menubar.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx  toggle.tsx
src/lib/: fonts.ts
