[package]
name = "autoware-launch-gui"
version = "1.0.5"
description = """
Autoware Launch GUI is a versatile tool designed to enhance your Autoware experience, 
offering a seamless graphical interface for interacting with Autoware projects. 
Whether you're launching Autoware with custom parameters, monitoring real-time system resources,
managing configurations, or handling ROS bag files, this tool streamlines your workflow. 
Key features include:

- Customizable Autoware launch configs and calibration tools(if available)
- Real-time CPU/memory usage monitoring and log viewing with search and highlight capabilities
- Advanced bag file management (playback, recording, and inspection) with custom flags
- Comprehensive topic publish/echo and service requesting capabilities
- Support for multiple workspaces and autostart on boot functionality
- Remote operation via SSH for launching Autoware on remote machines
- Easy profile management for quick access to frequently used directories and launch files

Autoware Launch GUI simplifies complex operations, making it an indispensable tool for developers and researchers working with Autoware. 
"""
authors = ["Khalil Selyan"]
license = "MIT"
repository = "https://github.com/leo-drive/autoware-launch-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tauri-plugin-os = "2.0.0-beta.0"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.0"
tauri-plugin-autostart = "2.0.0-beta.0"
walkdir = "2.3.2"
rayon = "1.5.0"
xml-rs = "0.8.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.8"
sysinfo = "0.18"
nix = "0.23.0"
dirs = "5.0.1"
regex = "1.9.6"
ssh2 = "0.9"
strip-ansi-escapes = "0.2"
clap = { version = "4.4.18", features = ["derive", "cargo"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
